Re-structure and adds add Activity page

--- a/public/HTML/Profile.html
+++ b/public/HTML/Profile.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <div class="container">
         <div class="left-section">
             <div class="profile-picture">
-                <img src="images\user.png" alt="Profile Picture">
+                <img src="../../images/user.png" alt="Profile Picture">
             </div>
             <h1>Name : Tanush </h1>
             <p class="title">Engineering Graduate</p>
             <div class="social-links">
-                <a href="#"><img src="images\Linkdin.png"alt="LinkedIn"></a>
-                <a href="#"><img src="images\twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="images\instagram.jpg" alt="Instagram"></a>
+                <a href="#"><img src="../../images/Linkdin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="../../images/Twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="../../images/instagram.jpg" alt="Instagram"></a>
             </div>
             <a href="mailto:xyz@example.com" class="email-button">Email Me</a>
             <div class="about">
@@ -25,12 +25,12 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, rerum?</p>
             </div>
             <div class="buttons">
-                <a href="#" class="portfolio-button">Portfolio</a>
+                <a href="./portfolio.html" class="portfolio-button">Portfolio</a>
                 <a href="#" class="resume-button">Resume</a>
             </div>
         </div>
         <div class="right-section">
-            <img src="images\portfolio side image.png" alt="Building Image">
+            <img src="../../images/portfolio side image.png" alt="Building Image">
         </div>
     </div>
 </body>
