--- a/public/HTML/portfolio.html
+++ b/public/HTML/portfolio.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <div class="container">
         <div class="left-section">
             <div class="profile-container">
                 <div class="profile-picture">
-                    <img src="images\user.png" alt="Profile Picture">
+                    <img src="../../images/user.png" alt="Profile Picture">
                 </div>
                 <div>
                     <h1>Name : Tanush</h1>
@@ -19,9 +19,9 @@
                 </div>
             </div>
             <div class="social-links">
-                <a href="#"><img src="images\Linkdin.png" alt="LinkedIn"></a>
-                <a href="#"><img src="images\Linkdin.png" alt="Twitter"></a>
-                <a href="#"><img src="images\instagram.jpg" alt="Instagram"></a>
+                <a href="#"><img src="../../images/Linkdin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="../../images/Twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="../../images/instagram.jpg" alt="Instagram"></a>
             </div>
             <a href="mailto:xyz@example.com" class="email-button">Email Me</a>
             <div class="about">
