--- a/public/HTML/Profile.html
+++ b/public/HTML/Profile.html
@@ -1,37 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="..//styles/profile.css">
 </head>
+
 <body>
     <div class="container">
         <div class="left-section">
-            <div class="profile-picture">
-                <img src="../../images/user.png" alt="Profile Picture">
+            <div class="profile-section">
+                <div class="profile-picture">
+                    <img src="../../images/user.png" alt="Profile Picture">
+                </div>
+                <h1>Name : Tanush</h1>
+                <p class="title">Engineering Graduate</p>
             </div>
-            <h1>Name : Tanush </h1>
-            <p class="title">Engineering Graduate</p>
+
             <div class="social-links">
                 <a href="#"><img src="../../images/Linkdin.png" alt="LinkedIn"></a>
                 <a href="#"><img src="../../images/Twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="../../images/instagram.jpg" alt="Instagram"></a>
+                <a href="#"><img src="../../images/insttagram new.jpg" alt="Instagram"></a>
+                <a href="mailto:xyz@example.com" class="email-button">Email Me</a>
             </div>
-            <a href="mailto:xyz@example.com" class="email-button">Email Me</a>
+
             <div class="about">
                 <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, rerum?</p>
+                <p>Hello everyone Tanush here!</p>
+                <ul>
+                    <li>HTML & CSS</li>
+                    <li>ReactJS</li>
+                    <li>MongoDB</li>
+                    <li>Java</li>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                </ul>
+                <p>Backend Intern @Arcon</p>
             </div>
+
             <div class="buttons">
                 <a href="./portfolio.html" class="portfolio-button">Portfolio</a>
                 <a href="#" class="resume-button">Resume</a>
             </div>
         </div>
         <div class="right-section">
-            <img src="../../images/portfolio side image.png" alt="Building Image">
+            <img src="../../images/portfolio side image.png" alt="Portfolio Image">
         </div>
+        
     </div>
+
+    <footer class="footer">
+        <p>&copy; 2024 Tanush Karane | All Rights Reserved</p>
+    </footer>
 </body>
+
 </html>
