--- a/public/HTML/index.html
+++ b/public/HTML/index.html
@@ -77,7 +77,7 @@
             <i class="fa-brands fa-square-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
           </div>
-          <div class="f-info-brand">&copy; AquaSense</div>
+          <div class="f-info-brand">&copy; GradPath</div>
           <div class="f-info-links">
             <a href="/privacy">Privacy</a>
             &nbsp<a href="/terms">Terms</a>
