--- a/public/HTML/adminActivityManagement.html
+++ b/public/HTML/adminActivityManagement.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Activity Management | GradPath</title>
+    <title>Admin Activity Management</title>
     <link rel="stylesheet" href="/public/styles/adminActivityManagement.css"> <!-- Link to the CSS file -->
+    <script src="/public/JS/adminActivityManagement.js"></script>
 </head>
 <body>
 
@@ -34,8 +35,9 @@
                 <tr>
                     <th>Activity Title</th>
                     <th>Student Name</th>
+                    <th>Year</th>
+                    <th>Branch</th>
                     <th>Category</th>
-                    <th>Status</th>
                     <th>Date</th>
                     <th>Actions</th>
                 </tr>
@@ -44,48 +46,44 @@
                 <tr>
                     <td>Research Project: AI Study</td>
                     <td>Tanush Karane</td>
-                    <td>Academic</td>
-                    <td>Pending Review</td>
-                    <td>12th Sep 2024</td>
+                    <td>TE</td>
+                    <td>IT</td>
+                    <td>Academics</td>
+                    <td>12-08-2024</td>
                     <td class="action-btns">
                         <a href="#" class="view-btn">View</a>
-                        <a href="#" class="delete-btn">Delete</a>
+                        <a href="#" class="reject-btn">Reject</a>
+                        <select class="faculty-dropdown">
+                            <option value="">Allot Faculty</option>
+                            <option value="faculty1">Dr. A Smith</option>
+                            <option value="faculty2">Dr. B Patel</option>
+                            <option value="faculty3">Prof. C Roy</option>
+                        </select>
                     </td>
                 </tr>
                 <tr>
                     <td>Basketball Championship</td>
                     <td>Aditi Mehta</td>
+                    <td>BE</td>
+                    <td>COMPS</td>
                     <td>Sports</td>
-                    <td>Approved</td>
-                    <td>8th Sep 2024</td>
+                    <td>17-09-2024</td>
                     <td class="action-btns">
                         <a href="#" class="view-btn">View</a>
-                        <a href="#" class="delete-btn">Delete</a>
+                        <a href="#" class="reject-btn">Reject</a>
+                        <select class="faculty-dropdown">
+                            <option value="">Allot Faculty</option>
+                            <option value="faculty1">Dr. D Williams</option>
+                            <option value="faculty2">Dr. E Khan</option>
+                            <option value="faculty3">Prof. F Sharma</option>
+                        </select>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
 
-    <script>
-        function toggleDropdown() {
-            var dropdown = document.getElementById("profile-dropdown");
-            dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
-        }
-
-        // Add event listener for clicking outside the dropdown
-        window.onclick = function(event) {
-            if (!event.target.matches('.profile') && !event.target.matches('.profile-icon')) {
-                var dropdowns = document.getElementsByClassName("profile-dropdown");
-                for (var i = 0; i < dropdowns.length; i++) {
-                    var openDropdown = dropdowns[i];
-                    if (openDropdown.style.display === "block") {
-                        openDropdown.style.display = "none";
-                    }
-                }
-            }
-        }
-    </script>
+    <script src="/public/scripts/adminActivityManagement.js"></script> <!-- Link to external JS file -->
 
 </body>
 </html>
