Profile & About added

--- a/public/HTML/portfolio2.html
+++ b/public/HTML/portfolio2.html
@@ -6,6 +6,45 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="../styles/portfolio2.css">
 </head>
+<script src="script.js"></script>
+
+ <title>Responsive Navigation Menu Bar</title>
+</head>
+<body>
+    <nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="#">GradPath</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#">GradPath</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="studentDashboard.html">Home</a></li>
+                    li><a href="addActivity.html">Post</a></li>
+                    <li><a href="portfolio2.html">Portfolio</a></li> <!-- Updated Portfolio link -->
+                    <li><a href="Profile.html">Profile</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <body>
     <div class="container">
         <div class="left-section">
@@ -14,7 +53,7 @@
                     <img src="../../images/user.png" alt="Profile Picture">
                 </div>
                 <div>
-                    <h1>Name : Narendra</h1>
+                    <h1>Name :Tanush Karane</h1>
                     <p class="title">Engineering Graduate</p>
                 </div>
             </div>
@@ -23,7 +62,7 @@
                 <a href="#"><img src="../../images/Twitter.png" alt="Twitter"></a>
                 <a href="#"><img src="../../images/instagram.jpg" alt="Instagram"></a>
             </div>
-            <a href="mailto:xyz@example.com" class="email-button">Email Me</a>
+            <a href="tanushkarane@gmail.com" class="email-button">Email Me</a>
             <div class="about">
                 <h2>About Me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, rerum?</p>
@@ -211,6 +250,22 @@
             </ul>
         </div>
     </div>
+
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">Services</a></li>
+                <li class="list-inline-item"><a href="#">About</a></li>
+                <li class="list-inline-item"><a href="#">Terms</a></li>
+                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+            </ul>
+            <p class="copyright">Company Name © 2018</p>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="scripts.js">
 
     </script> -->
