--- a/public/HTML/studentDashboard.html
+++ b/public/HTML/studentDashboard.html
@@ -19,18 +19,17 @@
     <nav>
         <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen' ></i>
-            <span class="logo navLogo"><a href="#">CodingLab</a></span>
+            <span class="logo navLogo"><a href="#">GradPath</a></span>
             <div class="menu">
                 <div class="logo-toggle">
-                    <span class="logo"><a href="#">CodingLab</a></span>
+                    <span class="logo"><a href="#">GradPath</a></span>
                     <i class='bx bx-x siderbarClose'></i>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="studentDashboard.html">Home</a></li>
+                    <li><a href="addActivity.html">Post</a></li>
+                    <li><a href="portfolio2.html">Portfolio</a></li> <!-- Updated Portfolio link -->
+                    <li><a href="Profile.html">Profile</a></li>
                 </ul>
             </div>
             <div class="darkLight-searchBox">
@@ -52,14 +51,13 @@
         </div>
     </nav>
 
-    <div class="profile-section">
+    <div class="Home Page">
         <div class="left-sidebar">
             <div class="profile-card">
-                <img src="../../images/user1.png" alt="Profile Picture" class="profile-pic">
+                <img src="../../images/user1.png.png" alt="Profile Picture" class="profile-pic">
                 <h3>Tanush Karane</h3>
                 <p class="rank">Rank:20</p>
-                <button class="edit-btn">Edit Profile</button>
-                <p class="location">India</p>
+                <p class="location">MUMBAI <style font size = 32px></style></p>
                 <a href="#" class="username">08Tanush</a>
             </div>
             <div class="community-stats">
@@ -231,9 +229,9 @@
                 </ul>
             </div>
             <div class="badges-card">
-                <h4>Badges</h4>
-                <p>20 Badges Earned</p>
-            </div>
+                <h4>Popular Categories</h4>
+                <p>Popular Category: Extracurricular Activities – 50+ students have submitted in this category</p>
+            </div> 
         </div>
     </div>
     
