--- a/public/HTML/index.html
+++ b/public/HTML/index.html
@@ -1,89 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <title>GradPath</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='styles.css') }}"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="main" style="background-color: #f0ffff">
-      <!-- Navbar -->
-      <div class="navbar">
-        <div class="logo">
-          <i
-            class="fa-solid fa-book-atlas"
-            color="Red"
-            padding-top="5rem"
-            height="10px"
-            width="10px"
-          >
-            GradPath</i
-          >
-        </div>
-        <div class="links">
-          <a href="/" class="{{ 'active' if request.path == '/' else '' }}"
-            >Home</a
-          >
-          <a
-            href="/Profile"
-            class="{{ 'active' if request.path == '/maps' else '' }}"
-            >Profile</a
-          >
-          
-        </div>
-      </div>
-
-      <!-- Page content -->
-      <div class="main-content">
-        <h1 align="center">Welcome to GradPath.</h1>
-        <hr />
-        <iframe
-          src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.6014441451525!2d72.88602117497749!3d19.081253182124403!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c8866a456c9f%3A0x8d1745d15baac575!2sDon%20Bosco%20Institute%20of%20Technology%2C%20Mumbai!5e0!3m2!1sen!2sin!4v1726576173429!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        >
-        </iframe>
-      </div>
-      <h1 align="center">About Us </h1>
-      <p>
-       <br> Welcome To GradPath , The platform to show your skills<br>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome Page</title>
+  <link rel="stylesheet" href="../styles/style.css">
+</head>
+<body>
+  <div class="responsive-container-block bigContainer">
+    <div class="responsive-container-block Container">
+      <p class="text-blk heading">
+        About Us
       </p>
-
-      <footer class="footer">
-        <div class="f-info">
-          <div class="f-info-socials">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
-          </div>
-          <div class="f-info-brand">&copy; GradPath</div>
-          <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            &nbsp<a href="/terms">Terms</a>
-          </div>
-        </div>
-      </footer>
+      <p class="text-blk subHeading">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+      </p>
+      <div class="social-icons-container">
+        <a class="social-icon">
+          <img class="socialIcon image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb33.png">
+        </a>
+        <a class="social-icon">
+          <img class="socialIcon image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb34.png">
+        </a>
+        <a class="social-icon">
+          <img class="socialIcon image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb35.png">
+        </a>
+        <a class="social-icon">
+          <img class="socialIcon image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/bb36.png">
+        </a>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
