--- a/public/HTML/portfolio3.html
+++ b/public/HTML/portfolio3.html
@@ -14,7 +14,7 @@
                     <img src="../../images/user.png" alt="Profile Picture">
                 </div>
                 <div>
-                    <h1>Name : Narendra</h1>
+                    <h1>Name :Tanush Karane</h1>
                     <p class="title">Engineering Graduate</p>
                 </div>
             </div>
@@ -26,7 +26,7 @@
             <a href="mailto:xyz@example.com" class="email-button">Email Me</a>
             <div class="about">
                 <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, rerum?</p>
+                <p>Professional Backend-Developer with skills in Python,Java,JavaScript</p>
             </div>
         </div>
         <div class="right-section">
