--- a/public/HTML/facaultydashboard.html
+++ b/public/HTML/facaultydashboard.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="../styles/studentDashboard.css">
+    <link rel="stylesheet" href="../styles/facaultydasboard.css">
      
     <!----===== Iconscout CSS ===== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -34,7 +34,7 @@
                     <i class="uil uil-bell"></i>
                     <span class="link-name">Notification</span>
                 </a></li>
-                <li><a href="#">
+                <li><a href="facultyapproval.html">
                     <i class="uil uil-check-circle"></i> 
                     <span class="link-name">Approval</span>
                 </a></li>
@@ -85,19 +85,19 @@
 
                 <div class="boxes">
                     <div class="box box1">
-                        <i class="uil uil-thumbs-up"></i>
-                        <span class="text">Rank</span>
-                        <span class="number">20</span>
+                        <i class="uil uil-cloud-check"></i>
+                        <span class="text">Reviewed Activities</span>
+                        <span class="number">56</span>
                     </div>
                     <div class="box box2">
                         <i class="uil uil-comments"></i>
-                        <span class="text">Porject Completed</span>
-                        <span class="number">15</span>
+                        <span class="text"> Assigned Reviews</span>
+                        <span class="number">100</span>
                     </div>
                     <div class="box box3">
-                        <i class="uil uil-share"></i>
-                        <span class="text">Certificates</span>
-                        <span class="number">16</span>
+                        <i class="uil uil-clock-two"></i>
+                        <span class="text">Pending Approvals</span>
+                        <span class="number">44</span>
                     </div>
                 </div>
             </div>
@@ -140,14 +140,14 @@
                         <span class="data-list">Post</span>
                     </div>
                     <div class="data status">
-                        <span class="data-title">Status</span>
-                        <span class="data-list">Assigned</span>
-                        <span class="data-list">Assigned</span>
-                        <span class="data-list">Not Assigned</span>
-                        <span class="data-list">Not Assigned</span>
-                        <span class="data-list">Assigned</span>
-                        <span class="data-list">Not Assigned</span>
-                        <span class="data-list">Assigned</span>
+                        <span class="data-title">Review Status</span>
+                        <span class="data-list">Pending</span>
+                        <span class="data-list">Pending</span>
+                        <span class="data-list">Pending</span>
+                        <span class="data-list">Approved</span>
+                        <span class="data-list">Approved</span>
+                        <span class="data-list">Pending</span>
+                        <span class="data-list">Approved</span>
                     </div>
                 </div>
             </div>
