Faculty Notifications Added and renamed some files

--- a/public/HTML/facultydashboard.html
+++ b/public/HTML/facultydashboard.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="../styles/facaultydasboard.css">
+    <link rel="stylesheet" href="/public/styles/facultydashboard.css">
+    <script src="/public/JS/facaultydashboard.js"></script>
      
     <!----===== Iconscout CSS ===== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -30,9 +31,9 @@
                     <i class="uil uil-estate"></i>
                     <span class="link-name">Home</span>
                 </a></li>
-                <li><a href="#">
+                <li><a href="/public/HTML/facultyNotifications.html">
                     <i class="uil uil-bell"></i>
-                    <span class="link-name">Notification</span>
+                    <span class="link-name">Notifications <span class="badge" id="notificationCount">0</span></span>
                 </a></li>
                 <li><a href="facultyapproval.html">
                     <i class="uil uil-check-circle"></i> 
