--- a/public/HTML/AssignFaculty.html
+++ b/public/HTML/AssignFaculty.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Activity Management</title>
-    <link rel="stylesheet" href="/public/styles/facaultyassign.css"> <!-- Link to the CSS file -->
-    <script src="/public/JS/adminActivityManagement.js"></script>
+    <link rel="stylesheet" href="/public/styles/facultyAssign.css"> <!-- Link to the CSS file -->
+    <script src=""></script>
 </head>
 <body>
 
