--- a/public/HTML/facultyNotifications.html
+++ b/public/HTML/facultyNotifications.html
@@ -25,15 +25,15 @@
 
         <div class="menu-items">
             <ul class="nav-links">
-                <li><a href="facultydashboard.html">
+                <li><a href="facultyDashboard.html">
                     <i class="uil uil-estate"></i>
                     <span class="link-name">Home</span>
                 </a></li>
-                <li><a href="/public/HTML/facultyNotifications.html">
+                <li><a href="facultyNotifications.html">
                     <i class="uil uil-bell"></i>
                     <span class="link-name">Notifications</span>
                 </a></li>
-                <li><a href="facultyapproval.html">
+                <li><a href="facultyApproval.html">
                     <i class="uil uil-check-circle"></i> 
                     <span class="link-name">Approval</span>
                 </a></li>
