--- a/public/HTML/facultydashboard.html
+++ b/public/HTML/facultydashboard.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="/public/styles/facultydashboard.css">
-    <script src="/public/JS/facaultydashboard.js"></script>
+    <link rel="stylesheet" href="/public/styles/facultyDashboard.css">
+    <script src="/public/JS/facultyDashboard.js"></script>
      
     <!----===== Iconscout CSS ===== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-    <title>Facaulty Dashboard Panel</title>
+    <title>Faculty Dashboard Panel</title>
 </head>
 <body>
     <nav>
@@ -33,9 +33,9 @@
                 </a></li>
                 <li><a href="/public/HTML/facultyNotifications.html">
                     <i class="uil uil-bell"></i>
-                    <span class="link-name">Notifications <span class="badge" id="notificationCount">0</span></span>
+                    <span class="link-name">Notifications <span class="badge" id="notificationCount"></span></span>
                 </a></li>
-                <li><a href="facultyapproval.html">
+                <li><a href="facultyApproval.html">
                     <i class="uil uil-check-circle"></i> 
                     <span class="link-name">Approval</span>
                 </a></li>
