--- a/public/HTML/AdminDashboard.html
+++ b/public/HTML/AdminDashboard.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="../styles/admindashboard.css">
+    <link rel="stylesheet" href="../styles/adminDashboard.css">
      
     <!----===== Iconscout CSS ===== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -26,15 +26,15 @@
 
         <div class="menu-items">
             <ul class="nav-links">
-                <li><a href="#">
+                <li><a href="adminDashboard.html">
                     <i class="uil uil-estate"></i>
-                    <span class="link-name">Dahsboard</span>
+                    <span class="link-name">Dashboard</span>
                 </a></li>
                 <li><a href="#">
                     <i class="uil uil-files-landscapes"></i>
                     <span class="link-name">Content</span>
                 </a></li>
-                <li><a href="AssignFacaulty.html">
+                <li><a href="assignFaculty.html">
                     <i class="uil uil-comments"></i> 
                     <span class="link-name">Assign Faculty</span>
                 </a></li>
