--- a/public/HTML/Profile.html
+++ b/public/HTML/Profile.html
@@ -29,7 +29,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="studentDashboard.html">Home</a></li>
-                    <li><a href="addActivity.html">Post</a></li>
+                    <li><a href="addActivity2.html">Post</a></li>
                     <li><a href="portfolio2.html">Portfolio</a></li> <!-- Updated Portfolio link -->
                     <li><a href="Profile.html">Profile</a></li>
                 </ul>
